<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".signupActivity"
    >


    <EditText
        android:id="@+id/SignupemailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:backgroundTint="#3a62ab"
        android:hint="@string/Mail"
        android:inputType="textWebEmailAddress"

        android:textCursorDrawable="@null"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/SignuppasswordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="132dp"

        android:backgroundTint="#29497b"
        android:hint="@string/Password"
        android:inputType="number"
        android:padding="20dp"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/RegisteredButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="209dp"
        android:text="@string/RegisterButton"
        android:textSize="15dp"
        android:textStyle="bold" />

</RelativeLayout>
